--- a/src/css/iiif-av-component.less
+++ b/src/css/iiif-av-component.less
@@ -105,7 +105,7 @@
                 border-right: 6px solid transparent;
             }
         }
-        
+
         &:focus .av-icon,
         &:focus .uv-icon {
             opacity: 1;
@@ -172,6 +172,25 @@
         .circular-slider-handle();
     }
 
+    .captions-container {
+        position: absolute;
+        bottom: 0;
+        height: 70px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+    }
+
+    .captions-text {
+        background-color: rgba(20, 20, 20, 0.5);
+        color: white;
+        font-size: 16px;
+        padding: 0;
+        display: none;
+    }
+
     // .ui-slider-handle:after {
     //     position: absolute;
     //     top: 0px;
@@ -183,7 +202,6 @@
     // }
 
     .controls-container {
-        overflow: hidden;
         margin-top: 5px;
         height: 36px;
     }
@@ -282,6 +300,92 @@
             background-image: data-uri('@{img-path}pause.png');
         }
 
+    }
+
+    i.av-icon-captions {
+        background-image: data-uri('@{img-path}cc.png');
+        width: 19px;
+        height: 15px
+    }
+
+    .captions-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        width: 30px;
+        height: 30px;
+
+        &.hide {
+            display: none;
+        }
+    }
+
+    .caption-choices {
+        background: rgba(50, 50, 50, 0.9);
+        border: solid 1px transparent;
+        border-radius: 0;
+        bottom: 90%;
+        padding: 0;
+        position: absolute;
+        visibility: visible;
+        width: 86px;
+        z-index: 10;
+    }
+
+    .caption-choices-list {
+        padding: 0;
+        margin: 0;
+        text-align: left;
+    }
+
+    .caption-choices-list-item {
+        color: #fff;
+        cursor: pointer;
+        display: block;
+        list-style-type: none !important;
+        margin: 0;
+        padding-bottom: 5px;
+        overflow: hidden;
+    }
+
+    .caption-choices-list-item:hover {
+        background-color: rgb(200, 200, 200) !important;
+        background-color: rgba(255, 255, 255, 0.4) !important;
+    }
+
+    .caption-choices-input {
+        clear: both;
+        float: left;
+        left: -1000px;
+        margin: 3px 3px 0 5px;
+        position: absolute;
+    }
+
+    .caption-choices-label {
+        cursor: pointer;
+        float: left;
+        font-size: 10px;
+        line-height: 15px;
+        padding: 4px 10px 0;
+        width: 100%;
+    }
+
+    .caption-choices-selected {
+        color: rgba(33, 248, 248, 1);
+    }
+
+    .offscreen {
+        border: 0;
+        clip: rect(1px, 1px, 1px, 1px);
+        clip-path: inset(50%);
+        height: 1px;
+        margin: -1px;
+        overflow: hidden;
+        padding: 0;
+        position: absolute;
+        width: 1px;
+        word-wrap: normal;
     }
 
     .av-icon-fast-forward {
